syntax = "proto3";

option java_multiple_files = true;
option java_package = "al.assignment.consumer.grpc";
option java_outer_classname = "ConsumerInterface";

service Consumer {
  rpc onTrade (Trade) returns (ConsumerStatus) {}
  rpc onBook (Book) returns (ConsumerStatus) {}
}

message ConsumerStatus {
    bool status = 1;
}

message Trade {
    bool isBuy = 1;
    string price = 2;
    string quantity = 3;
}

message Book {
    bool isBuy = 1;
    bool isDelete = 2;
    string price = 3;
    string quantity = 4;
    string orderId = 5;
}
